# aiagent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.kilocode/rules/: rules.md
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  context.py  graph.py  nodes.py  state.py
app/agent/prompts/: __init__.py  system_prompt.py
app/agent/tools/: __init__.py  document_tools.py  history_tools.py  rag_tool.py  sheets_tool.py
app/api/: deps.py
app/api/routes/: __init__.py  chat.py  documents.py  export.py  health.py
app/core/: __init__.py  exceptions.py  llm_factory.py  logger.py
app/integrations/: __init__.py  google_sheets.py
app/rag/: __init__.py  chunker.py  config.py  embeddings.py  loader.py  retriever.py  utils.py  vectorstore.py
app/schemas/: __init__.py  chat.py  documents.py  sheets.py
tests/: conftest.py  test_agent.py  test_api.py  test_rag.py  test_rag_retriever.py  test_rag_utils.py  test_sheets.py
ui/: vite.config.ts
ui/src/api/: client.ts
ui/src/assets/: main.css
ui/src/components/chat/: ChatInput.vue  ChatMessage.vue  ChatSources.vue  ChatThread.vue
ui/src/components/common/: BaseBadge.vue  BaseButton.vue  BaseDropzone.vue  BaseInput.vue  BaseSpinner.vue  BaseToast.vue
ui/src/components/layout/: AppLayout.vue  AppSidebar.vue
ui/src/composables/: useFileUpload.ts  useSSE.ts
ui/src/router/: index.ts
ui/src/stores/: useChatStore.ts  useDocsStore.ts  useToastStore.ts
ui/src/types/: index.ts
ui/src/utils/: constants.ts  export.ts
ui/src/views/: ChatView.vue  DocsView.vue
